try to fix flash on iOS

--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -9,5 +9,6 @@ video {
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
+  background: transparent;
   transition: 1s opacity;
 }
